# class2019bot

./: README.md  abyss.py  botty.py  game.py  pyproject.toml  testgame.py
games/: abyss.py  apocalypse.py  jeff.py  jungle.py  love.py  mathspirit.py  momma.py  potions.py  quiz.py  rng.py  snake.py  testgame.py
